--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -24,6 +24,19 @@
           </div>
         </div>
         <div class="bg-black p-5">
+          <h1 class="flex justify-center items-center text-xl text-cyan-400">
+            <i class="bi bi-twitter mr-1"></i> Twitter
+            <span class="bg-cyan-400 text-black ml-1.5 rounded-lg px-2"
+              >NEW!</span
+            >
+          </h1>
+          <div>
+            <a href="/twitter/user/search" class="text-3xl font-bold"
+              >User statistics</a
+            >
+          </div>
+        </div>
+        <div class="bg-black p-5">
           <h1 class="flex justify-center items-center text-xl text-orange-500">
             <i class="bi bi-mouse2-fill mr-1"></i> Clickers
           </h1>
@@ -32,7 +45,7 @@
               >Toastify Clicker</a
             >
           </div>
-					<div>
+          <div>
             <a href="/clickers/choccy" class="text-3xl font-bold"
               >ChoccyCounts Clicker</a
             >
