--- a/client/views/twitter/user/search.ejs
+++ b/client/views/twitter/user/search.ejs
@@ -65,7 +65,7 @@
             const elems = $(".channel");
             for (let i = 0; i < data.results.length; i++) {
               const elem = elems[i];
-              elem.href = `/twitter/user/${data.results[i].id}`;
+              elem.href = `/twitter/user/${data.results[i].username}`;
               elem.style.display = "flex";
 
               const icon = elem.querySelector(".channel-icon");
