add yt streams, fix twitter search title

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -20,13 +20,17 @@
               >Video statistics</a
             >
             <br />
+            <a href="/youtube/stream/search" class="text-3xl font-bold"
+              >Stream statistics</a
+            >
+            <br />
             <a href="/youtube/total" class="text-3xl font-bold">Total videos</a>
           </div>
         </div>
         <div class="bg-black p-5">
           <h1 class="flex justify-center items-center text-xl text-cyan-400">
             <i class="bi bi-twitter mr-1"></i> Twitter
-            <span class="bg-cyan-400 text-black ml-1.5 rounded-lg px-2"
+            <span class="bg-cyan-400 text-black ml-1.5 rounded-xl px-2"
               >NEW!</span
             >
           </h1>
