--- a/client/views/youtube/stream/search.ejs
+++ b/client/views/youtube/stream/search.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include('../../partials/head', { title: "Twitter user search" }) %>
+    <%- include('../../partials/head', { title: "YouTube stream search" }) %>
   </head>
   <script>
     var channels = [];
@@ -13,11 +13,11 @@
         <form>
           <input
             class="block p-4 w-full text-sm bg-neutral-800 rounded-lg border-neutral-600 placeholder-neutral-400 text-white focus:ring-blue-500 focus:border-blue-500"
-            placeholder="Search for a Twitter user..."
+            placeholder="Search for a YouTube stream..."
             id="search"
           />
           <button
-            class="text-white absolute right-10 top-[7.4rem] bg-cyan-600 hover:bg-cyan-800 focus:outline-none font-medium rounded-lg text-sm px-4 py-2"
+            class="text-white absolute right-10 top-[7.4rem] bg-red-700 hover:bg-red-800 focus:outline-none font-medium rounded-lg text-sm px-4 py-2"
             type="submit"
           >
             Search
@@ -31,13 +31,13 @@
           style="display: none"
         >
           <img
-            src="https://yt3.ggpht.com/ytc/AMLnZu9ouu2eBFlCyh6lORj8YUCdNENJRst9IoU5sYf1Ig=s240-c-k-c0xffffffff-no-rj-mo"
-            class="channel-icon rounded-full"
-            width="80"
+            src="https://i.ytimg.com/vi/0CTp1a-aCUM/default.jpg"
+            class="video-thumbnail rounded-xl"
+            width="100"
           />
           <div class="ml-3 text-left">
-            <h1 class="channel-name font-bold text-4xl">MrBeast</h1>
-            <p class="channel-id">100M subscribers</p>
+            <h1 class="video-name font-bold text-4xl">MrBeast</h1>
+            <p class="video-id">100M subscribers</p>
           </div>
         </a>
         <% }) %>
@@ -57,25 +57,24 @@
 
       function channelSearch(search) {
         fetch(
-          "https://livecounts.xyz/api/twitter-live-follower-count/search/" +
-            search
+          "https://livecounts.xyz/api/youtube-live-view-count/search/" + search
         )
           .then((res) => res.json())
           .then((data) => {
             const elems = $(".channel");
             for (let i = 0; i < data.results.length; i++) {
               const elem = elems[i];
-              elem.href = `/twitter/user/${data.results[i].username}`;
+              elem.href = `/youtube/stream/${data.results[i].id}`;
               elem.style.display = "flex";
 
-              const icon = elem.querySelector(".channel-icon");
+              const icon = elem.querySelector(".video-thumbnail");
               icon.src = data.results[i].pfp;
 
-              const name = elem.querySelector(".channel-name");
+              const name = elem.querySelector(".video-name");
               name.textContent = data.results[i].name;
 
-              const id = elem.querySelector(".channel-id");
-              id.textContent = "@" + data.results[i].username;
+              const id = elem.querySelector(".video-id");
+              id.textContent = data.results[i].id;
             }
           });
       }
