--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -41,6 +41,19 @@
           </div>
         </div>
         <div class="bg-black p-5">
+          <h1 class="flex justify-center items-center text-xl text-pink-500">
+            <i class="bi bi-tiktok mr-1"></i> TikTok
+            <span class="bg-pink-500 text-black ml-1.5 rounded-xl px-2"
+              >NEW!</span
+            >
+          </h1>
+          <div>
+            <a href="/tiktok/user/search" class="text-3xl font-bold"
+              >User statistics</a
+            >
+          </div>
+        </div>
+        <div class="bg-black p-5">
           <h1 class="flex justify-center items-center text-xl text-orange-500">
             <i class="bi bi-mouse2-fill mr-1"></i> Clickers
           </h1>
