fix tiktok stats title

--- a/client/views/tiktok/user/stats.ejs
+++ b/client/views/tiktok/user/stats.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include('../../partials/head', { title: `Twitter statistics for ${name}`
+    <%- include('../../partials/head', { title: `TikTok statistics for ${name}`
     }) %>
     <link rel="stylesheet" href="/ess/odometer.css" />
     <script src="/ess/odometer.js"></script>
