--- a/client/views/youtube/video/stats.ejs
+++ b/client/views/youtube/video/stats.ejs
@@ -19,7 +19,11 @@
           width="150"
           class="rounded-lg"
         />
-        <h1 class="mt-2 text-2xl"><%= title %></h1>
+        <h1 class="mt-2 text-3xl"><%= title %></h1>
+        <div class="mt-1 flex flex-row justify-center">
+          <img src="/public/youtube.png" class="mr-1 mt-[1.2px]" width="20" />
+          <h2 class="text-sm"><%= id %></h2>
+        </div>
         <span
           id="views"
           class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
