--- a/client/views/youtube/channel/stats.ejs
+++ b/client/views/youtube/channel/stats.ejs
@@ -19,7 +19,11 @@
           width="80"
           class="rounded-full"
         />
-        <h1 class="mt-2 text-2xl"><%= name %></h1>
+        <h1 class="mt-2 text-3xl"><%= name %></h1>
+        <div class="mt-1 flex flex-row justify-center">
+          <img src="/public/youtube.png" class="mr-1 mt-[1.2px]" width="20" />
+          <h2 class="text-sm"><%= handle %></h2>
+        </div>
         <span
           id="subscribers"
           class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
