--- a/client/views/partials/head.ejs
+++ b/client/views/partials/head.ejs
@@ -18,6 +18,6 @@
 />
 <link
   rel="shortcut icon"
-  href="https://icons.getbootstrap.com/assets/icons/graph-up-arrow.svg"
+  href="/public/favicon.ico"
   type="image/x-icon"
 />
