--- a/client/views/partials/navbar.ejs
+++ b/client/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="bg-black">
-  <a href="/" class="flex items-center p-2">
-    <i class="bi bi-graph-up-arrow text-6xl mr-2"></i>
+  <a href="/" class="flex items-center p-2 pl-1">
+    <img src="/public/logo.png" width="60" />
     <p class="text-3xl">Livecounts.tk</p>
   </a>
 </nav>
