add pop cat clicker

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -30,9 +30,6 @@
         <div class="bg-black p-5">
           <h1 class="flex justify-center items-center text-xl text-cyan-400">
             <i class="bi bi-twitter mr-1"></i> Twitter
-            <span class="bg-cyan-400 text-black ml-1.5 rounded-xl px-2"
-              >NEW!</span
-            >
           </h1>
           <div>
             <a href="/twitter/user/search" class="text-3xl font-bold"
@@ -43,9 +40,6 @@
         <div class="bg-black p-5">
           <h1 class="flex justify-center items-center text-xl text-pink-500">
             <i class="bi bi-tiktok mr-1"></i> TikTok
-            <span class="bg-pink-500 text-black ml-1.5 rounded-xl px-2"
-              >NEW!</span
-            >
           </h1>
           <div>
             <a href="/tiktok/user/search" class="text-3xl font-bold"
@@ -61,10 +55,13 @@
             <a href="/clickers/toastify" class="text-3xl font-bold"
               >Toastify Clicker</a
             >
-          </div>
-          <div>
+            <br />
             <a href="/clickers/choccy" class="text-3xl font-bold"
               >ChoccyCounts Clicker</a
+            >
+            <br />
+            <a href="/clickers/popcat" class="text-3xl font-bold"
+              >Pop Cat Clicker</a
             >
           </div>
         </div>
