responsive design go brrrrrrrrrr

--- a/client/views/clickers/choccy.ejs
+++ b/client/views/clickers/choccy.ejs
@@ -21,7 +21,7 @@
         <h1 class="mt-2 text-2xl">ChoccyCounts Clicker</h1>
         <span
           id="count"
-          class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
+          class="odometer font-['Roboto'] text-7xl sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl leading-[1.05em]"
           >0</span
         >
         <p class="mt-2 text-sm">Clicks</p>
