--- a/client/views/countify/stats.ejs
+++ b/client/views/countify/stats.ejs
@@ -26,7 +26,7 @@
         </div>
         <span
           id="count"
-          class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
+          class="odometer font-['Roboto'] text-7xl sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl leading-[1.05em]"
           >0</span
         >
         <p class="mt-2 text-sm">Counts</p>
