--- a/client/views/clickers/popcat/stats.ejs
+++ b/client/views/clickers/popcat/stats.ejs
@@ -22,7 +22,7 @@
         <h1 class="mt-2 text-3xl"><%= name %></h1>
         <span
           id="clicks"
-          class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
+          class="odometer font-['Roboto'] text-7xl sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl leading-[1.05em]"
           >0</span
         >
         <p class="mt-2 text-sm">Clicks</p>
