--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -6,7 +6,7 @@
   <body class="text-white bg-[#1b1b1b]">
     <%- include('./partials/navbar') %>
     <main class="text-center m-4">
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3">
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-3">
         <div class="bg-black p-5">
           <h1 class="flex justify-center items-center text-xl text-red-600">
             <i class="bi bi-youtube mr-1"></i> YouTube
