--- a/client/views/twitter/user/stats.ejs
+++ b/client/views/twitter/user/stats.ejs
@@ -22,17 +22,17 @@
         </div>
         <span
           id="followers"
-          class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
+          class="odometer font-['Roboto'] text-7xl sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl leading-[1.05em]"
           >0</span
         >
         <p class="mt-2 text-sm">Followers</p>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 mt-4 gap-3">
+      <div class="grid grid-cols-1 lg:grid-cols-2 mt-4 gap-3">
         <div class="bg-black p-4">
           <h1 class="text-lg">Following</h1>
           <span
             id="following"
-            class="odometer font-['Roboto'] text-5xl leading-[1.05em]"
+            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
             >0</span
           >
         </div>
@@ -40,7 +40,7 @@
           <h1 class="text-lg">Tweets</h1>
           <span
             id="tweets"
-            class="odometer font-['Roboto'] text-5xl leading-[1.05em]"
+            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
             >0</span
           >
         </div>
