--- a/client/views/youtube/total.ejs
+++ b/client/views/youtube/total.ejs
@@ -15,16 +15,16 @@
         <h1 class="text-2xl">Total YouTube videos</h1>
         <span
           id="total"
-          class="odometer font-['Roboto'] text-9xl leading-[1.05em]"
+          class="odometer font-['Roboto'] text-7xl sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl leading-[1.05em]"
           >0</span
         >
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 mt-4 gap-3">
+      <div class="grid grid-cols-1 lg:grid-cols-2 mt-4 gap-3">
         <div class="bg-black p-4">
           <h1 class="text-lg">Public videos</h1>
           <span
             id="public"
-            class="odometer font-['Roboto'] text-5xl leading-[1.05em]"
+            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
             >0</span
           >
         </div>
@@ -32,7 +32,7 @@
           <h1 class="text-lg">Unlisted videos</h1>
           <span
             id="unlisted"
-            class="odometer font-['Roboto'] text-5xl leading-[1.05em]"
+            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
             >0</span
           >
         </div>
@@ -40,7 +40,7 @@
           <h1 class="text-lg">Private videos</h1>
           <span
             id="private"
-            class="odometer font-['Roboto'] text-5xl leading-[1.05em]"
+            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
             >0</span
           >
         </div>
@@ -48,14 +48,14 @@
           <h1 class="text-lg">Shorts</h1>
           <span
             id="shorts"
-            class="odometer font-['Roboto'] text-5xl leading-[1.05em]"
+            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
             >0</span
           >
         </div>
       </div>
       <p class="mt-4 bg-black p-4 text-xl">
-        These counts are <span class="font-bold">estimated</span> using math taken
-        from
+        These counts are <span class="font-bold">estimated</span> using math
+        taken from
         <a
           href="https://youtube.com/@sfmg"
           class="text-sky-500 hover:bg-sky-500 hover:text-black hover:px-2 hover:py-1 hover:rounded-md transition-all duration-150"
