--- a/client/views/youtube/channel/stats.ejs
+++ b/client/views/youtube/channel/stats.ejs
@@ -15,9 +15,12 @@
     <main class="text-center m-4">
       <div class="bg-black p-4 flex flex-col items-center">
         <img
+          src="<%= `https://www.banner.yt/${id}?width=1240` %>"
+          class="w-0 sm:w-full h-40 object-cover aspect-video rounded-lg"
+        />
+        <img
           src="<%= `https://www.banner.yt/${id}/avatar` %>"
-          width="80"
-          class="rounded-full"
+          class="rounded-full h-40 absolute top-[108px]"
         />
         <h1 class="mt-2 text-3xl"><%= name %></h1>
         <div class="mt-1 flex flex-row justify-center">
