add analytics through plausible

--- a/client/views/partials/head.ejs
+++ b/client/views/partials/head.ejs
@@ -21,3 +21,4 @@
   href="/public/favicon.ico"
   type="image/x-icon"
 />
+<script defer data-domain="livecounts.tk" src="https://plausible.io/js/script.js"></script>
