update plausilausible api

--- a/client/views/partials/head.ejs
+++ b/client/views/partials/head.ejs
@@ -21,4 +21,4 @@
   href="/public/favicon.ico"
   type="image/x-icon"
 />
-<script defer data-domain="livecounts.tk" data-api="https://scripts.tca-tech.workers.dev/api/event" src="https://scripts.tca-tech.workers.dev/script.js"></script>
+<script defer data-domain="livecounts.tk" data-api="https://scripts.tca-tech.workers.dev/api/visit" src="https://scripts.tca-tech.workers.dev/script.js"></script>
