add tailwind prettier plugin, add compare link to navbar

--- a/client/views/partials/navbar.ejs
+++ b/client/views/partials/navbar.ejs
@@ -1,6 +1,13 @@
-<nav class="bg-black">
-  <a href="/" class="flex items-center p-2 pl-1">
+<nav class="flex flex-row items-center justify-between bg-black p-2 px-1">
+  <a href="/" class="flex items-center">
     <img src="/public/logo.png" width="60" />
     <p class="text-3xl">Livecounts.tk</p>
   </a>
+  <div class="pr-2.5 text-lg">
+    <a
+      class="aria-disabled:cursor-default aria-disabled:opacity-50"
+      aria-disabled="true"
+      >Compare</a
+    >
+  </div>
 </nav>
