--- a/client/views/youtube/stream/stats.ejs
+++ b/client/views/youtube/stream/stats.ejs
@@ -10,10 +10,10 @@
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
     </style>
   </head>
-  <body class="text-white bg-[#1b1b1b]">
+  <body class="bg-[#1b1b1b] text-white">
     <%- include('../../partials/navbar') %>
-    <main class="text-center m-4">
-      <div class="bg-black p-4 flex flex-col items-center">
+    <main class="m-4 text-center">
+      <div class="flex flex-col items-center bg-black p-4">
         <img
           src="<%= `https://i.ytimg.com/vi/${id}/mqdefault.jpg` %>"
           width="150"
@@ -25,31 +25,30 @@
           <h2 class="text-sm"><%= id %></h2>
         </div>
         <span
-          id="viewers"
-          class="odometer font-['Roboto'] text-7xl sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl leading-[1.05em]"
+          id="<%= counts[count][0] %>"
+          class="odometer font-['Roboto'] text-7xl leading-[1.05em] sm:text-7xl md:text-[5.5rem] lg:text-8xl xl:text-9xl"
           >0</span
         >
-        <p class="mt-2 text-sm">Viewers</p>
+        <p class="mt-2 text-sm"><%= counts[count][1] %></p>
       </div>
-      <div class="grid grid-cols-1 lg:grid-cols-2 mt-4 gap-3">
-        <div class="bg-black p-4">
-          <h1 class="text-lg">Likes</h1>
+      <div class="mt-4 grid grid-cols-1 gap-3 lg:grid-cols-2">
+        <!-- prettier-ignore -->
+        <% counts.filter((_, index) => index !== count).forEach((count) => { %>
+        <a
+          class="bg-black p-4 hover:scale-105"
+          href="?count=<%= counts.findIndex((c) => c[0] === count[0]) %>"
+        >
           <span
-            id="likes"
-            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
-            >0</span
+            id="<%= count[0] %>"
+            class="odometer font-['Roboto'] text-5xl leading-[1.05em] xl:text-6xl"
           >
-        </div>
-        <div class="bg-black p-4">
-          <h1 class="text-lg">Total views</h1>
-          <span
-            id="views"
-            class="odometer font-['Roboto'] text-[2.5rem] xl:text-5xl leading-[1.05em]"
-            >0</span
-          >
-        </div>
+            0
+          </span>
+          <h1 class="text-sm"><%= count[1] %></h1>
+        </a>
+        <% }); %>
       </div>
-      <div class="bg-black p-4 mt-4 flex flex-col items-center">
+      <div class="mt-4 flex flex-col items-center bg-black p-4">
         <div id="chart" class="w-full"></div>
       </div>
     </main>
@@ -148,13 +147,19 @@
       fetch("/api/youtube/stream/stats/<%= id %>")
         .then((res) => res.json())
         .then((data) => {
-          document.getElementById("viewers").textContent = data.counts.viewers;
+          document.getElementById("viewers").textContent =
+            data.counts.viewers ?? 0;
           document.getElementById("likes").textContent = data.counts.likes;
           document.getElementById("views").textContent = data.counts.views;
 
           if (chart.series[0].points.length === 3600)
             chart.series[0].data[0].remove();
-          chart.series[0].addPoint([Date.now(), parseInt(data.counts.viewers)]);
+          chart.series[0].addPoint([
+            Date.now(),
+            parseInt(
+              Object.entries(data.counts)[parseInt("<%= count %>")][1]
+            ) ?? 0,
+          ]);
         });
     }, 2000);
   </script>
