--- a/client/views/youtube/stream/stats.ejs
+++ b/client/views/youtube/stream/stats.ejs
@@ -5,7 +5,7 @@
     ${title}` }) %>
     <link rel="stylesheet" href="/ess/odometer.css" />
     <script src="/ess/odometer.js"></script>
-    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/10.3.3/highcharts.js"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
     </style>
